# Project

./: .gitignore  CMakeLists.txt  README.md  client.c  client.h  haiku  haiku.c  haiku.h  japanese.haiku  main.c  makefile  queue.c  queue.h  server.c  server.h  temp.txt  tests  tests.c  tests.h  western.haiku
V1/: client.c  haiku.c  haiku.h  makefile  server.c
